--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 </div>
             </div>
             <div class="myinfo intrest">
-                <h2 class="title1">Intrest</h2>
+                <h2 class="title1">Interest</h2>
                 <ul>
                     <li><i class="fa fa-gamepad" aria-hidden="true"></i>Gaming</li>
                     <li><i class="fa fa-book" aria-hidden="true"></i>Reading</li>
