--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
         <div class="right_side">
             <div class="myinfo">
                 <h2 class="title1">Profile</h2>
-                <p>Highly motivated and dedicated individual with a strong passion for front-end development.
-                    Completed a comprehensive 3-month training program focused on honing skills in front-end web
-                    development technologies.Adept at creating user-friendly interfaces,implementing responsive designs.
+                <p>Highly motivated and detail-oriented Front-End Developer with a strong foundation in HTML, CSS, and JavaScript. 
+                    Recently completed a rigorous 3-month training program focused on building responsive and visually appealing web applications. 
+                    Eager to apply the skills and knowledge acquired during the training to contribute to a dynamic development team and create engaging user experiences.
+                </p>
             </div>
             <div class="myinfo skills">
-                <h2 class="title1">Professional skills</h2>
+                <h2 class="title1">Professional Skills</h2>
                 <div class="box">
                     <ul>
                         <li>
@@ -105,7 +106,7 @@
                             <p>Having Knowledge on popular front-end framework such as React.Js and Redux</p>
                         </li>
                         <li>
-                            <p>Familiarity with Version Control System like Git</p>
+                            <p>Familiarity with Version Control System like Git and Github</p>
                         </li>
                         <li>
                             <p>Knowledge of responsive web designs</p>
@@ -113,6 +114,25 @@
                     </ul>
                 </div>
             </div> 
+            <div class="myinfo skills">
+                <h2 class="title1">Additional Skills</h2>
+                <div class="box">
+                    <ul>
+                        <li>
+                            <p>Strong problem-solving and analytical thinking abilities</p>
+                        </li>
+                        <li>
+                            <p>Ability to work collaboratively in a team environment</p>
+                        </li>
+                        <li>
+                            <p>Excellent communication and interpersonal skills</p>
+                        </li>
+                        <li>
+                            <p>Continuous learner,keeping up with the latest trends and advancements in front-end development</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <div class="myinfo Project" >
                 <h2 class="title1">Projects</h2>
                 <div class="box">
