--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         <div class="right_side">
             <div class="myinfo">
-                <h2 class="title1">Profile</h2>
+                <h2 class="title1">Objective</h2>
                 <p>Highly motivated and detail-oriented Front-End Developer with a strong foundation in HTML, CSS, and JavaScript. 
                     Recently completed a rigorous 3-month training program focused on building responsive and visually appealing web applications. 
                     Eager to apply the skills and knowledge acquired during the training to contribute to a dynamic development team and create engaging user experiences.
@@ -103,7 +103,7 @@
                             <p>Proficient in HTML5,CSS3,Bootstrap and Javascript</p>
                         </li>
                         <li>
-                            <p>Having Knowledge on popular front-end framework such as React.Js and Redux</p>
+                            <p>Knowledge on popular front-end framework such as React.Js and Redux</p>
                         </li>
                         <li>
                             <p>Familiarity with Version Control System like Git and Github</p>
@@ -165,7 +165,7 @@
                         </li>
                         <li>
                             <h3>Weather App</h3>
-                            <p>Developed a responsive weather app and added localstorage to store the last city and temperature </p>
+                            <p>Developed a responsive weather app and added localstorage to store the data for the user </p>
                             <p>Applied Redux and CSS framework to enhance the functionality. <a href="https://saiteja581.github.io/Redux_Weather/">Check Here</a></p>
                         </li>
                     </ul>
