changes in objective

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="container">
         <div class="left_side">
             <div class="profile">
-                <div class="image">
+                <!-- <div class="image">
                     <img src="teja.jpg">
-                </div>
+                </div> -->
                 <h2>Keshetty SaiTeja</h2>
             </div>
             <div class="contact">
@@ -90,10 +90,32 @@
         <div class="right_side">
             <div class="myinfo">
                 <h2 class="title1">Objective</h2>
-                <p>Highly motivated and detail-oriented Front-End Developer with a strong foundation in HTML, CSS, and JavaScript. 
-                    Recently completed a rigorous 3-month training program focused on building responsive and visually appealing web applications. 
-                    Eager to apply the skills and knowledge acquired during the training to contribute to a dynamic development team and create engaging user experiences.
+                <p>Enthusiastic and skilled Front End Developer with a passion for creating visually appealing and user-friendly web applications. 
+                   Proficient in HTML5, CSS3, Bootstrap, JavaScript, Git, GitHub, React.JS, and Redux. Dedicated to continuous learning and staying 
+                   updated with the latest web development trends. Strong problem-solving abilities and a collaborative mindset to deliver high-quality projects.
                 </p>
+            </div>
+            <div class="myinfo training">
+                <h2 class="title1">TRAINING</h2>
+                <div class="box">
+                    <ul>
+                        <li>
+                           <p> Front-End Developer, 10000Coders/Online<br/><br/>Completed:[15-01-2023 to 20-04-2023] </p>
+                        </li><br/>
+                        <li>
+                            <p>Explored advanced concepts in HTML, CSS, and JavaScript</p>
+                        </li>
+                        <li>
+                            <p>Developed responsive web applications using Bootstrap</p>
+                        </li>
+                        <li>
+                            <p>Learned how to deploy the projects in Git and Github</p>
+                        </li>
+                        <li>
+                            <p>Built interactive user interfaces with React.JS and managed application state with Redux</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="myinfo skills">
                 <h2 class="title1">Professional Skills</h2>
@@ -119,6 +141,9 @@
                 <div class="box">
                     <ul>
                         <li>
+                            <p>Familiarity with RESTful APIs</p>
+                        </li>
+                        <li>
                             <p>Strong problem-solving and analytical thinking abilities</p>
                         </li>
                         <li>
@@ -129,6 +154,9 @@
                         </li>
                         <li>
                             <p>Continuous learner,keeping up with the latest trends and advancements in front-end development</p>
+                        </li>
+                        <li>
+                            <p>Problem Solving and Debugging</p>
                         </li>
                     </ul>
                 </div>
@@ -144,9 +172,10 @@
                             <p>Utilized HTML,CSS and Javascript to create an intuitive and visually appealing user interface. <a href="https://saiteja581.github.io/calci/">Check Here</a></p>
                         </li>
                         <li>
-                            <h3>To-Do App</h3>
-                            <p>Created a To-do app </p>
-                            <p>Applied my skills using HTML,CSS and Javascript to create an intuitive and visually appealing user interface. <a href="https://saiteja581.github.io/todo/">Check Here</a></p>
+                            <h3>Personal Portfolio Website</h3>
+                            <p>Designed and developed a personal responsive portfolio website to showcase projects and skills </p>
+                            <p>Utilizsed Bootstrap framework for enhanced visual appeal</p>
+                            <p>Applied my skills using HTML,CSS and Javascript to create an intuitive and visually appealing user interface. <a href="https://saiteja581.github.io/Portfolio/">Check Here</a></p>
                         </li>
                         <li>
                             <h3>Weather App</h3>
@@ -156,24 +185,24 @@
                         <li>
                             <h3>To-Do App</h3>
                             <p>Implemented UI/UX todo app and added localstorage to store the data</p>
-                            <p>Applied React.Js and CSS framework to enhance the functionality of the app. <a href="https://saiteja581.github.io/React-Todo/">Check Here</a></p>           
+                            <p>Applied React.Js and CSS to enhance the functionality of the app. <a href="https://saiteja581.github.io/React-Todo/">Check Here</a></p>           
                         </li>
                         <li>
                             <h3>TicTacToe Game </h3>
                             <p>Created a game and added the responsive for the webpage</p>
-                            <p>Utilized Redux and CSS framework to enhance the functionality. <a href="https://saiteja581.github.io/Redux_TicTacToe/">Check Here</a></p>
+                            <p>Utilized Redux and CSS to enhance the functionality. <a href="https://saiteja581.github.io/Redux_TicTacToe/">Check Here</a></p>
                         </li>
                         <li>
                             <h3>Weather App</h3>
                             <p>Developed a responsive weather app and added localstorage to store the data for the user </p>
-                            <p>Applied Redux and CSS framework to enhance the functionality. <a href="https://saiteja581.github.io/Redux_Weather/">Check Here</a></p>
+                            <p>Applied Redux and CSS to enhance the functionality. <a href="https://saiteja581.github.io/Redux_Weather/">Check Here</a></p>
                         </li>
                     </ul>
                     </div>
                 </div>
             </div>
             <div class="myinfo intrest">
-                <h2 class="title1">Interest</h2>
+                <h2 class="title1">HOBBIES</h2>
                 <ul>
                     <li><i class="fa fa-gamepad" aria-hidden="true"></i>Gaming</li>
                     <li><i class="fa fa-book" aria-hidden="true"></i>Reading</li>
